Fix off-screen element positioning

--- a/accessibility/skip-links/01-styles.css
+++ b/accessibility/skip-links/01-styles.css
@@ -190,7 +190,7 @@
   }
 
   .off-screen {
-    left: -100vh;
+    left: -100vw;
     position: absolute;
   }
 
